# coding-challenge-haskell

./: AUTHORS  FinalMatching.hs  InputDataCommon.hs  LICENSE  Listing.hs  Main.hs  Matching.hs  Product.hs  README.txt  Sortable.cabal  build.sh
